[FIX] web : remove inline class from expected revenue field
The 'oe_inline' class does not allow the 'at' and the following elements to move to right when we have currency symbol of more than one character. Previously the value of max-width was set to 9rem which is now changed to inherit, so that it still have the space even if the space on the sides is consumed by other elements.

Steps to reproduce:
1. Set the currency of your company whose symbol is more than one character e.g AED
2. Start writing in expected revenue field.

Current Behaviour:
The input field will take over the 'at' string and overlap.

Expected Beahviour:
The strings and elements following the expected revenue input should move to right if the currency symbol's width increases.

OPW-3343377

X-original-commit: 66946eb2311dd31b91d090b119ead610557d6b94

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -715,7 +715,7 @@
     .o_field_float, .o_field_date, .o_field_monetary {
         &.oe_inline {
             &, input {
-                max-width: 9rem;
+                max-width: inherit;
             }
         }
     }
